--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -99,6 +99,7 @@
 .section-hero {
 	background-color: #fae5d3;
 	padding: 4.8rem 0 9.6rem 0;
+	margin-top: 6.8rem;
 }
 
 .hero {
